--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<figure class="test1"><!-- 图片容器开始 -->
-		<img src="images/banner-1.jpg" alt="">
+		<img src="#" alt="">
 		<figcaption>
 			<h2>平移动画</h2>
 			<p>一来一去</p>
@@ -17,7 +17,7 @@
 	</figure> <!-- 图片容器结束 -->
 
 	<figure class="test2"><!-- 图片容器开始 -->
-		<img src="images/banner-2.jpg" alt="">
+		<img src="#" alt="">
 		<figcaption>
 			<h2>旋转动画</h2>
 			<p>飞来飞去</p>
@@ -25,16 +25,10 @@
 		</figcaption>
 	</figure> <!-- 图片容器结束 -->
 
-	<figure class="test3"><!-- 图片容器开始 -->
-		<img src="images/banner-3.jpg" alt="">
-		<figcaption>
-			<h2>斜切动画</h2>
-			<p>天龙八部-凌波微步</p>
-		</figcaption>
-	</figure> <!-- 图片容器结束 -->
+	
 
-	<figure class="test4"><!-- 图片容器开始 -->
-		<img src="images/banner-4.jpg" alt="">
+	<figure class="test3"><!-- 图片容器开始 -->
+		<img src="#" alt="">
 	<figcaption>
 		<h2>缩放动画</h2>
 		<p>飞来飞去</p>
