--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>css3动画</title>
-	<link rel="stylesheet" href="css/main.css"/>
+	<link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
-	<figure class="test1"><!-- 图片容器开始 -->
+	<figure class="test1">
+		<!-- 图片容器开始 -->
 		<img src="#" alt="">
 		<figcaption>
 			<h2>平移动画</h2>
@@ -14,26 +17,67 @@
 			<p>移来移去</p>
 			<p>迷踪幻影</p>
 		</figcaption>
-	</figure> <!-- 图片容器结束 -->
+	</figure>
+	<!-- 图片容器结束 -->
 
-	<figure class="test2"><!-- 图片容器开始 -->
+	<figure class="test2">
+		<!-- 图片容器开始 -->
 		<img src="#" alt="">
 		<figcaption>
 			<h2>旋转动画</h2>
 			<p>飞来飞去</p>
 			<div></div>
 		</figcaption>
-	</figure> <!-- 图片容器结束 -->
+	</figure>
+	<!-- 图片容器结束 -->
 
-	
 
-	<figure class="test3"><!-- 图片容器开始 -->
+
+	<figure class="test3">
+		<!-- 图片容器开始 -->
 		<img src="#" alt="">
-	<figcaption>
-		<h2>缩放动画</h2>
-		<p>飞来飞去</p>
-		<div></div>
-	</figcaption>
-	</figure> <!-- 图片容器结束 -->
+		<figcaption>
+			<h2>缩放动画</h2>
+			<p>飞来飞去</p>
+			<div></div>
+		</figcaption>
+	</figure>
+	<!-- 图片容器结束 -->
+
+	<figure class="test2">
+		<!-- 图片容器开始 -->
+		<img src="#" alt="">
+		<figcaption>
+			<h2>旋转动画</h2>
+			<p>飞来飞去</p>
+			<div></div>
+		</figcaption>
+	</figure>
+	<!-- 图片容器结束 -->
+
+	<figure class="test3">
+		<!-- 图片容器开始 -->
+		<img src="#" alt="">
+		<figcaption>
+			<h2>缩放动画</h2>
+			<p>飞来飞去</p>
+			<div></div>
+		</figcaption>
+	</figure>
+	<!-- 图片容器结束 -->
+
+	<figure class="test1">
+		<!-- 图片容器开始 -->
+		<img src="#" alt="">
+		<figcaption>
+			<h2>平移动画</h2>
+			<p>一来一去</p>
+			<p>移来移去</p>
+			<p>迷踪幻影</p>
+		</figcaption>
+	</figure>
+	<!-- 图片容器结束 -->
+
 </body>
+
 </html>
